# weeksched

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
tests/: discover.py  test_weekly_schedule.py
weeksched/: schedule.py
