[tool.poetry]
name = "weeksched"
version = "0.1.0"
description = "A tool to manage weekly schedules"
authors = ["Antoine Galataud <antoine@foobot.io>"]
packages = [
    { include = "weeksched" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.3"
calendra = "^7.9.0"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]
freezegun = "^1.1.0"
coverage = { version = "^7.5.4", extras = ["toml"] }

[tool.poetry.scripts]
tests = "tests.discover:run"
coverage = "tests.discover:coverage"

[tool.coverage.report]
include = [
    "weeksched/*",
]
omit = [
    "**/__init__.py",
]
ignore_errors = true
show_missing = true
skip_empty = true
skip_covered = false

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
