[tool.poetry]
name = "weeksched"
version = "0.1.0"
description = "A tool to manage weekly schedules"
authors = ["Antoine Galataud <antoine@foobot.io>"]
packages = [
    { include = "weeksched" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.4"
calendra = "^7.11.0"
pytz = "^2025.1"

[tool.poetry.dev-dependencies]
freezegun = "^1.5.1"
coverage = { version = "^7.10.4", extras = ["toml"] }

[tool.poetry.scripts]
tests = "tests.discover:run"
coverage = "tests.discover:coverage"

[tool.coverage.report]
include = [
    "weeksched/*",
]
omit = [
    "**/__init__.py",
]
ignore_errors = true
show_missing = true
skip_empty = true
skip_covered = false

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
